changes to spacing and margins + background fix

--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
+/* background is all in one color and margin established */
 body {
-  background: linear-gradient(#6cdac4, #99a1f5);
-  margin: 3.1em;
+  background: linear-gradient(#6cdac4, #99a1f5) fixed;
+  margin: 2%;
+  font-family: Monomaniac One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 36px;
+  line-height: 52px;
+  align-items: center;
+  text-align: center;
 }
 
 /* WATER WASTE - The title of the page will always be the title of the app */
 h1 {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
   top: 27.22%;
   bottom: 48.43%;
 
@@ -16,18 +21,13 @@ h1 {
   font-weight: normal;
   font-size: 100px;
   line-height: 145px;
-  /* identical to box height */
-  display: flex;
+
   align-items: center;
   text-align: center;
-
   color: #000000;
 }
 
 h3 {
-  position: relative;
-  left: 22.42%;
-  right: 23.74%;
   top: 27.22%;
   bottom: 48.43%;
 
@@ -36,7 +36,6 @@ h3 {
   font-weight: normal;
   font-size: 36px;
   line-height: 52px;
-  display: flex;
   align-items: center;
   text-align: center;
 
@@ -79,18 +78,7 @@ h3 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-body {
-  font-family: Monomaniac One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 52px;
-  display: flex;
-  align-items: center;
-  text-align: center;
 
-  color: #000000;
-}
 
 #calibrate {
   position: absolute;
